Make sure messages don't overflow

--- a/client/app/styles/window.less
+++ b/client/app/styles/window.less
@@ -140,6 +140,10 @@
             width: 48px;
             height: 48px;
         }
+
+        .message-list {
+            overflow-wrap: break-word;
+        }
     }
 
     .line {
